// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubaccountFilter Component renders open popover with options 1`] = `
<Popover
  className="Popover"
  id="popover-subaccount-filter"
  left={true}
  open={true}
  trigger={
    <div>
      <Button
        aria-controls="popover-subaccount-filter"
        aria-labelledby="subaccount-label"
        className="Button"
        fullWidth={true}
        onClick={[Function]}
      >
        <span
          className="ButtonLabel"
        >
          Master & All Subaccounts
        </span>
        <ArrowDropDown
          className="ButtonIcon"
        />
      </Button>
    </div>
  }
>
  <div>
    <div
      className="PopoverContent"
    >
      <div
        className="SubaccountSearchHeader"
      >
        <UnstyledLink
          className="BackButton"
          onClick={[Function]}
        >
          <ChevronLeft
            size={20}
          />
        </UnstyledLink>
        <span>
          Subaccount
        </span>
      </div>
      <div
        className="SubaccountSearch"
      >
        <Connect(SubaccountTypeahead)
          label="Subaccount Search"
          onChange={[Function]}
          placeholder="Search here"
          unfiltered={true}
        />
      </div>
    </div>
    <div
      className="PopoverContent showOptions"
    >
      <SubaccountOption
        key="Master & All Subaccounts"
        label="Master & All Subaccounts"
        onChange={[Function]}
        onOpen={[Function]}
        selected={true}
        value={
          Object {
            "id": undefined,
            "name": "Master & All Subaccounts",
          }
        }
      />
      <SubaccountOption
        key="Master Account"
        label="Master Account"
        onChange={[Function]}
        onOpen={[Function]}
        selected={false}
        value={
          Object {
            "id": 0,
            "name": "Master Account",
          }
        }
      />
      <SubaccountOption
        key="Search for Subaccount"
        label="Search for Subaccount"
        nested={true}
        onChange={[Function]}
        onOpen={[Function]}
        selected={false}
        value={
          Object {
            "id": undefined,
            "name": "Search for Subaccount",
          }
        }
      />
    </div>
  </div>
</Popover>
`;

exports[`SubaccountFilter Component renders open popover with options after back button is clicked 1`] = `"PopoverContent showOptions"`;

exports[`SubaccountFilter Component renders open popover with subaccount search 1`] = `"PopoverContent showSearch"`;

exports[`SubaccountFilter Component renders with subaccount 1`] = `
<Fragment>
  <Label
    id="subaccount-label"
    label="Subaccount"
  />
  <div
    className="SubaccountFilter"
  >
    <WindowEvent
      event="click"
      handler={[Function]}
    />
    <WindowEvent
      event="keydown"
      handler={[Function]}
    />
    <Popover
      className="Popover"
      id="popover-subaccount-filter"
      left={true}
      open={false}
      trigger={
        <div>
          <Button
            aria-controls="popover-subaccount-filter"
            aria-labelledby="subaccount-label"
            className="Button"
            fullWidth={true}
            onClick={[Function]}
          >
            <span
              className="ButtonLabel"
            >
              Test Subaccount
            </span>
            <span>
              (
              123
              )
            </span>
            <ArrowDropDown
              className="ButtonIcon"
            />
          </Button>
        </div>
      }
    >
      <div>
        <div
          className="PopoverContent"
        >
          <div
            className="SubaccountSearchHeader"
          >
            <UnstyledLink
              className="BackButton"
              onClick={[Function]}
            >
              <ChevronLeft
                size={20}
              />
            </UnstyledLink>
            <span>
              Subaccount
            </span>
          </div>
          <div
            className="SubaccountSearch"
          >
            <Connect(SubaccountTypeahead)
              label="Subaccount Search"
              onChange={[Function]}
              placeholder="Search here"
              unfiltered={true}
            />
          </div>
        </div>
        <div
          className="PopoverContent showOptions"
        >
          <SubaccountOption
            key="Master & All Subaccounts"
            label="Master & All Subaccounts"
            onChange={[Function]}
            onOpen={[Function]}
            selected={false}
            value={
              Object {
                "id": undefined,
                "name": "Master & All Subaccounts",
              }
            }
          />
          <SubaccountOption
            key="Master Account"
            label="Master Account"
            onChange={[Function]}
            onOpen={[Function]}
            selected={false}
            value={
              Object {
                "id": 0,
                "name": "Master Account",
              }
            }
          />
          <SubaccountOption
            key="Search for Subaccount"
            label="Search for Subaccount"
            nested={true}
            onChange={[Function]}
            onOpen={[Function]}
            selected={true}
            value={
              Object {
                "id": undefined,
                "name": "Search for Subaccount",
              }
            }
          />
        </div>
      </div>
    </Popover>
  </div>
</Fragment>
`;
